fix: fixing overflow-y

--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -14,6 +14,10 @@
   margin-top: 40px;
 }
 
+.read {
+  overflow-y: hidden;
+}
+
 .img-fluid {
   border-radius: 15px;
 }
